--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+:root{
+	background:rgb(135,206,235);
+}
+
+p:first-child{
+	background:black;
+	color:white;
+}
+p:nth-child(2){
+	color:black;
+}
+p:last-child{
+	color:red;
+}
+ul>li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+}
+li:first-child,li:last-child{
+	font-size:22px;
+	background:white;
+}
+li:nth-child(3){
+	background-color:pink;
+}
+  ul li:nth-child(even) {
+    /* background-color: white; */
+  }
